--- a/1103.model_eval_forloop.ipynb
+++ b/1103.model_eval_forloop.ipynb
@@ -2,25 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/782 [00:01<?, ?it/s]\n"
+      "100%|██████████| 782/782 [00:50<00:00, 15.56it/s]"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'collections.OrderedDict' object has no attribute 'modules'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/kkh/pytorch/1103.model_eval_forloop.ipynb 셀 1\u001b[0m in \u001b[0;36m<cell line: 25>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bzetta.skku.edu/home/kkh/pytorch/1103.model_eval_forloop.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=56'>57</a>\u001b[0m \u001b[39minput\u001b[39m \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m\u001b[39m#.cuda(non_blocking=True)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bzetta.skku.edu/home/kkh/pytorch/1103.model_eval_forloop.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=57'>58</a>\u001b[0m label \u001b[39m=\u001b[39m label\u001b[39m#.cuda(non_blocking=True)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bzetta.skku.edu/home/kkh/pytorch/1103.model_eval_forloop.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=58'>59</a>\u001b[0m hookF \u001b[39m=\u001b[39m [Hook(name) \u001b[39mfor\u001b[39;00m layer \u001b[39min\u001b[39;00m \u001b[39mlist\u001b[39m(model\u001b[39m.\u001b[39;49m_modules\u001b[39m.\u001b[39;49mmodules())]\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bzetta.skku.edu/home/kkh/pytorch/1103.model_eval_forloop.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=59'>60</a>\u001b[0m output \u001b[39m=\u001b[39m model(\u001b[39minput\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bzetta.skku.edu/home/kkh/pytorch/1103.model_eval_forloop.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=60'>61</a>\u001b[0m pred \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39margmax(output, \u001b[39m1\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'collections.OrderedDict' object has no attribute 'modules'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 th : \n",
+      "tensor(0.1820, device='cuda:0')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -51,9 +55,11 @@
     "\n",
     "\n",
     "\n",
-    "mask = [0x80,0xC0,0xE0,0xF0,0xF8,0xFC,0xFE,0xFF]\n",
-    "for i in range(7):\n",
-    "    model = models.efficientnet_b2(weights=models.EfficientNet_B2_Weights.IMAGENET1K_V1)\n",
+    "# mask = [0x80,0xC0,0xE0,0xF0,0xF8,0xFC,0xFE,0xFF]\n",
+    "mask = [0xC0]\n",
+    "for i in range(1):\n",
+    "    model = models.resnet50(weights=models.ResNet50_Weights.IMAGENET1K_V1).to('cuda')\n",
+    "    # model = models.efficientnet_b2(weights=models.EfficientNet_B2_Weights.IMAGENET1K_V1)\n",
     "    for name, param in model.named_parameters():\n",
     "        Data_shape = param.shape\n",
     "        \n",
@@ -67,10 +73,10 @@
     "\n",
     "        \n",
     "            \n",
-    "    # dataset = dsets.ImageFolder(\"/media/imagenet/val\", models.ResNet50_Weights.IMAGENET1K_V1.transforms()) ### 2번째 인자, transform\n",
+    "    dataset = dsets.ImageFolder(\"/media/imagenet/val\", models.ResNet50_Weights.IMAGENET1K_V1.transforms()) ### 2번째 인자, transform\n",
     "    #dataset = dsets.ImageFolder(\"/media/imagenet/val\", models.VGG19_Weights.IMAGENET1K_V1.transforms()) ### 2번째 인자, transform\n",
     "    # dataset = dsets.ImageFolder(\"/media/imagenet/val\", models.MobileNet_V2_Weights.IMAGENET1K_V1.transforms()) ### 2번째 인자, transform\n",
-    "    dataset = dsets.ImageFolder(\"/media/imagenet/val\", models.EfficientNet_B2_Weights.IMAGENET1K_V1.transforms()) ### 2번째 인자, transform\n",
+    "    # dataset = dsets.ImageFolder(\"/media/imagenet/val\", models.EfficientNet_B2_Weights.IMAGENET1K_V1.transforms()) ### 2번째 인자, transform\n",
     "\n",
     "    loader = DataLoader(dataset= dataset, # dataset\n",
     "                    batch_size=64,   # batch size power to 2\n",
@@ -84,9 +90,9 @@
     "    model.eval()\n",
     "\n",
     "    for input, label in tqdm(loader):\n",
-    "        input = input#.cuda(non_blocking=True)\n",
-    "        label = label#.cuda(non_blocking=True)\n",
-    "        hookF = [Hook(name) for layer in list(model.)]\n",
+    "        input = input.cuda(non_blocking=True)\n",
+    "        label = label.cuda(non_blocking=True)\n",
+    "        # hookF = [Hook(name) for layer in list(model.)]\n",
     "        output = model(input)\n",
     "        pred = torch.argmax(output, 1)\n",
     "        correct += (pred == label).int().sum()\n",
