--- a/1220_histogram.ipynb
+++ b/1220_histogram.ipynb
@@ -2,23 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kkh/anaconda3/envs/1031_kkh/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "100%|██████████| 782/782 [00:48<00:00, 16.05it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0.5500, device='cuda:0')\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_42345/1496075520.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorchvision\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorchvision\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdsets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
      ]
     }
    ],
@@ -51,14 +46,6 @@
     "import numpy as np \n",
     "from scipy.stats import norm \n",
     "\n",
-    "def plt(x):\n",
-    "    plt.figure(figsize=(15,10))\n",
-    "    plt.title('Standard Normal Distribution') \n",
-    "    plt.xlabel('x') \n",
-    "    plt.ylabel('f(x)')\n",
-    "    plt.grid()\n",
-    "    plt.plot(x, norm.pdf(x, loc=0, scale=1))\n",
-    "    plt.show()\n",
     "\n",
     "\n",
     "\n",
@@ -298,17 +285,25 @@
     "    rolling_9 = (((lossy_result >= 32768) & (lossy_result < 65536)) | (lossy_result <= -65536) )#.view(np.int16)\n",
     "\n",
     "    INT7_index = rolling_0*0+rolling_1*1+rolling_2*2+rolling_3*3+rolling_4*4+rolling_5*5+rolling_6*6+rolling_7*7+rolling_8*8+rolling_9*9\n",
-    "    print(INT7_index[0],INT7_index.dtype,INT7_index.shape)\n",
-    "    average_index_result = np.sum(INT7_index, axis=1) / 32\n",
-    "    \n",
-    "    print(average_index_result.shape, average_index_result[1:5])\n",
-    "    # # print(INT7_index,INT7_index.shape, INT7_index.dtype)\n",
-    "    # INT7_index_int4 = INT7_index.view(np.int8)\n",
-    "    # # print(INT7_index_int4.shape, INT7_index_int4.dtype)\n",
-    "    \n",
     "    INT7 = rolling_0&0x007f+rolling_1&0x00fe+rolling_2&0x01fc+rolling_3&0x03f8+rolling_4&0x07f0+rolling_5&0x0fe0+rolling_6&0x1fc0+rolling_7&0x3f80+rolling_8&0x7f00+rolling_9&0xfe00\n",
     "    return INT7.view(np.int16)\n",
     "     \n",
+    "def rolling_index(flag, x_torch):\n",
+    "    result = x_torch*(~flag)\n",
+    "    rolling_0 = (((result >= 0x0000) & (result < 128)) | ((result <= -128) & (result > -256)))#.view(np.int16)\n",
+    "    rolling_1 = (((result >= 128) & (result < 256)) | ((result <= -256) & (result > -512)))#.view(np.int16)\n",
+    "    rolling_2 = (((result >= 256) & (result < 512)) | ((result <= -512) & (result > -1024)))#.view(np.int16)\n",
+    "    rolling_3 = (((result >= 512) & (result < 1024)) | ((result <= -1024) & (result > -2048)))#.view(np.int16)\n",
+    "    rolling_4 = (((result >= 1024) & (result < 2048)) | ((result <= -2048) & (result > -4096)))#.view(np.int16)\n",
+    "    rolling_5 = (((result >= 2048) & (result < 4096)) | ((result <= -4096) & (result > -8192)))#.view(np.int16)\n",
+    "    rolling_6 = (((result >= 4096) & (result < 8192)) | ((result <= -8192) & (result > -16384)))#.view(np.int16)\n",
+    "    rolling_7 = (((result >= 8192) & (result < 16384)) | ((result <= -16384) & (result > -32768)))#.view(np.int16)\n",
+    "    rolling_8 = (((result >= 16384) & (result < 32768)) | ((result <= -32768) & (result > -65536)))#.view(np.int16)\n",
+    "    rolling_9 = (((result >= 32768) & (result < 65536)) | (result <= -65536) )#.view(np.int16)\n",
+    "\n",
+    "    index = rolling_0*1+rolling_1*2+rolling_2*3+rolling_3*4+rolling_4*5+rolling_5*6+rolling_6*7+rolling_7*8+rolling_8*9+rolling_9*10\n",
+    "    return index \n",
+    "\n",
     "\n",
     "# mask = [0x80,0xC0,0xE0,0xF0,0xF8,0xFC,0xFE,0xFF]\n",
     "def Decomp(flag,x_numpy,length):\n",
@@ -323,7 +318,7 @@
     "# gc.collect()\n",
     "# torch.cuda.empty_cache()\n",
     "\n",
-    "model = fuse_bn_recursively(models.resnet50(weights=models.ResNet50_Weights.IMAGENET1K_V1)).to('cuda')\n",
+    "model = fuse_bn_recursively(models.resnet50(weights=models.ResNet50_Weights.IMAGENET1K_V1))#.to('cuda')\n",
     "# model = fuse_bn_recursively(models.resnet50(weights=models.ResNet50_Weights.IMAGENET1K_V1))#.to('cuda'))\n",
     "# model = models.efficientnet_b2(weights=models.EfficientNet_B2_Weights.IMAGENET1K_V1).to('cuda')\n",
     "#model = fuse_bn_recursively(models.resnet50(weights=models.ResNet50_Weights.IMAGENET1K_V1).to('cuda'))\n",
@@ -354,8 +349,6 @@
     "#     # return scale  * (x_q - zero_p)\n",
     "#     return x_q.float()\n",
     "#########################################################################################\n",
-    "\n",
-    "    \n",
     "\n",
     "def Quant(x : torch.Tensor, n : int) :\n",
     "     \n",
@@ -438,43 +431,43 @@
     "    x_2d = x_q.view(x_q.shape[0], -1).to('cuda')\n",
     "    return (scale  * (x_2d - zero_p)).view(x_q.shape)\n",
     "\n",
-    "def save_outputs_hook(layer_id) -> Callable:          \n",
-    "    def fn(_, input) :\n",
-    "        with torch.no_grad():\n",
-    "            Quant_input, scale, zero_p = Quant(input[0],16)#quantize_channel(param,16)\n",
-    "            flag = Comp(Quant_input,length)\n",
-    "            Comp_output = Decomp(flag, Quant_input,length).reshape(Quant_input.shape)\n",
-    "        # param[:] = dequantize_channel(Comp_output, scale, zero_p)\n",
-    "            input[0][:] = DeQuant(Comp_output, scale, zero_p)#dequantize_channel(Comp_output, scale, zero_p)\n",
+    "# def save_outputs_hook(layer_id) -> Callable:          \n",
+    "#     def fn(_, input) :\n",
+    "#         with torch.no_grad():\n",
+    "#             Quant_input, scale, zero_p = Quant(input[0],16)#quantize_channel(param,16)\n",
+    "#             flag = Comp(Quant_input,length)\n",
+    "#             Comp_output = Decomp(flag, Quant_input,length).reshape(Quant_input.shape)\n",
+    "#         # param[:] = dequantize_channel(Comp_output, scale, zero_p)\n",
+    "#             input[0][:] = DeQuant(Comp_output, scale, zero_p)#dequantize_channel(Comp_output, scale, zero_p)\n",
     "     \n",
-    "            # Quant_input, scale, zero_p = Quant(input[0],16)\n",
-    "            # flag = Comp(Quant_input)\n",
-    "            # Comp_output = Decomp(flag,Quant_input).reshape(Quant_input.shape)\n",
-    "            # input[0][:] = DeQuant(Comp_output, scale, zero_p).reshape(input[0].shape)\n",
-    "            # print(layer_id, 'fmap', np.sum(flag) / len(flag.reshape(-1,)))\n",
-    "            # # print(layer_id, input[0][:])\n",
-    "            # input[0][:] = DeQuant(Quant_input, scale, zero_p).reshape(input[0].shape)\n",
-    "            # input[0][:] = DeQuant(torch.tensor(Comp_output), scale, zero_p).reshape(input[0].shape)\n",
-    "            #print(input[0].shape)\n",
-    "    return fn\n",
+    "#             # Quant_input, scale, zero_p = Quant(input[0],16)\n",
+    "#             # flag = Comp(Quant_input)\n",
+    "#             # Comp_output = Decomp(flag,Quant_input).reshape(Quant_input.shape)\n",
+    "#             # input[0][:] = DeQuant(Comp_output, scale, zero_p).reshape(input[0].shape)\n",
+    "#             # print(layer_id, 'fmap', np.sum(flag) / len(flag.reshape(-1,)))\n",
+    "#             # # print(layer_id, input[0][:])\n",
+    "#             # input[0][:] = DeQuant(Quant_input, scale, zero_p).reshape(input[0].shape)\n",
+    "#             # input[0][:] = DeQuant(torch.tensor(Comp_output), scale, zero_p).reshape(input[0].shape)\n",
+    "#             #print(input[0].shape)\n",
+    "#     return fn\n",
     "\n",
-    "for name, layer in model.named_modules():\n",
-    "    if (\"layer1\" != name) | (\"layer2\" != name) | (\"layer3\" != name)| (\"layer4\" != name) :\n",
-    "        layer = dict([*model.named_modules()])[name]\n",
-    "        #if isinstance(layer, nn.ReLU):\n",
-    "        layer.register_forward_pre_hook(save_outputs_hook(name))\n",
+    "# for name, layer in model.named_modules():\n",
+    "#     if (\"layer1\" != name) | (\"layer2\" != name) | (\"layer3\" != name)| (\"layer4\" != name) :\n",
+    "#         layer = dict([*model.named_modules()])[name]\n",
+    "#         #if isinstance(layer, nn.ReLU):\n",
+    "#         # layer.register_forward_pre_hook(save_outputs_hook(name))\n",
     "\n",
     "length = 64\n",
-    "for name, param in model.named_parameters():\n",
+    "# parameters = []\n",
+    "parameters = np.zeros([]).astype(np.int16)\n",
+    "parameters_index = np.zeros([]).astype(np.int16)\n",
+    "\n",
+    "for name, param in tqdm(model.named_parameters()):\n",
     "    Data_shape = param.shape\n",
     "    shape_mul = 1\n",
-    "    # numpy_Data_shape = param.detach().cpu().numpy()\n",
     "    for i in Data_shape:\n",
     "        shape_mul *= i\n",
     "    with torch.no_grad():\n",
-    "        # print(\"origin : \",param.view(torch.int16).view(-1))\n",
-    "        # Quant_input, scale, zero_p = Quant(param,16)\n",
-    "        # param[:] = DeQuant(Quant_input, scale, zero_p) \n",
     "        if shape_mul%64 != 0 :\n",
     "            Quant_input, scale, zero_p = quantize_channel(param,16)\n",
     "            param[:] = dequantize_channel(Quant_input, scale, zero_p)\n",
@@ -496,121 +489,81 @@
     "            # param[:] = DeQuant(Quant_input, scale, zero_p)#dequantize_channel(Comp_output, scale, zero_p)\n",
     "\n",
     "            continue    \n",
-    "\n",
-    "        # Quant_input, scale, zero_p = Quant(param,16)\n",
-    "        # param[:] = DeQuant(Quant_input, scale, zero_p)\n",
     "        # Quant_input, scale, zero_p = quantize_channel(param,16)                    \n",
     "        Quant_input, scale, zero_p = Quant(param,16)#quantize_channel(param,16)\n",
     "        \n",
-    "        plot(Quant_input)\n",
-    "        # flag = Comp(Quant_input,length)\n",
+    "        # parameters = np.append(parameters.reshape(-1,).tolist(),Quant_input.tolist())\n",
+    "        flag = Comp(Quant_input,length)\n",
     "        # Comp_output = Decomp(flag, Quant_input,length).reshape(Quant_input.shape)\n",
+    "        param_index = rolling_index(flag,parameters)        \n",
+    "        parameters_index = np.append(parameters_index.reshape(-1,).tolist(),param_index.tolist())\n",
     "        \n",
-    "        \n",
-    "        # print(Quant_input[0][0])\n",
-    "        # print(np.sum(flag.astype(np.int32)), len(flag.reshape(-1,)))\n",
     "        # print(name, param.shape, param.max(), param.min(), np.sum(flag.astype(np.int32)) / len(flag.reshape(-1,)))\n",
     "        \n",
     "        # param[:] = dequantize_channel(Comp_output, scale, zero_p)\n",
-    "        param[:] = DeQuant(Comp_output, scale, zero_p)#dequantize_channel(Comp_output, scale, zero_p)\n",
-    "     \n",
-    "dataset = dsets.ImageFolder(\"/media/imagenet/val\", models.ResNet50_Weights.IMAGENET1K_V1.transforms()) ### 2번째 인자, transform\n",
-    "loader = DataLoader(dataset= dataset, # dataset\n",
-    "                   batch_size= 128,   # batch size power to 2\n",
-    "                   shuffle = False, # false\n",
-    "                   num_workers = 8, # num_workers \n",
-    "                   pin_memory=True) # pin_memory \n",
+    "        param[:] = DeQuant(Quant_input, scale, zero_p)#dequantize_channel(Comp_output, scale, zero_p)\n",
     "\n",
-    "correct = 0\n",
-    "total = 50000\n",
-    "accum = 0\n",
-    "model.eval()\n",
-    "# torch.no_grad()\n",
-    "with torch.no_grad():\n",
-    "    for idx, (input, label) in enumerate(tqdm(loader)):\n",
-    "        input = input.cuda(non_blocking=True)\n",
-    "        label = label.cuda(non_blocking=True)     \n",
-    "        output = model(input)    \n",
-    "        # print(output)\n",
-    "        pred = torch.argmax(output, 1)\n",
-    "        correct += (pred == label).int().sum()\n",
-    "        accum += 4\n",
-    "        # if idx % 1000 == 0:\n",
-    "        #     print(idx, correct /accum * 100, correct, accum)\n",
-    "    acc1 = correct / total * 100\n",
     "\n",
-    "print(acc1)\n",
+    "from dataprep.eda import plot\n",
+    "\n",
+    "# value = parameters.reshape(-1)\n",
+    "index = parameters.reshape(-1)\n",
+    "\n",
+    "\n",
+    "%matplotlib notebook\n",
+    "\n",
+    "X = plt.hist(index)\n",
+    "plt.show()\n",
+    "\n",
+    "plot(X).save(\"/home/kkh/pytorch/fig.html\")\n",
+    "# with open(\"data.html\",\"w\") as file:\n",
+    "#     file.write(index.data)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# dataset = dsets.ImageFolder(\"/media/imagenet/val\", models.ResNet50_Weights.IMAGENET1K_V1.transforms()) ### 2번째 인자, transform\n",
+    "# loader = DataLoader(dataset= dataset, # dataset\n",
+    "#                    batch_size= 128,   # batch size power to 2\n",
+    "#                    shuffle = False, # false\n",
+    "#                    num_workers = 8, # num_workers \n",
+    "#                    pin_memory=True) # pin_memory \n",
+    "\n",
+    "# correct = 0\n",
+    "# total = 50000\n",
+    "# accum = 0\n",
+    "# model.eval()\n",
+    "# # torch.no_grad()\n",
+    "# with torch.no_grad():\n",
+    "#     for idx, (input, label) in enumerate(tqdm(loader)):\n",
+    "#         input = input.cuda(non_blocking=True)\n",
+    "#         label = label.cuda(non_blocking=True)     \n",
+    "#         output = model(input)    \n",
+    "#         # print(output)\n",
+    "#         pred = torch.argmax(output, 1)\n",
+    "#         correct += (pred == label).int().sum()\n",
+    "#         accum += 4\n",
+    "#         # if idx % 1000 == 0:\n",
+    "#         #     print(idx, correct /accum * 100, correct, accum)\n",
+    "#     acc1 = correct / total * 100\n",
+    "\n",
+    "# print(acc1)\n",
     "\n",
     "\n",
     "# x = torch.Tensor([[[1,2,4,8,16,32,64,256,512,1024],[0,0,0,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0,0]]*62,[[32000,32000,32000,32000,32000,32000,32000,32000,32000,32000]*64]])\n",
     "# y = Comp(x)\n",
     "# print(y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 0.1130,  0.0874, -0.1723, -0.0508,  0.0868,  0.0694,  0.0226,  0.2247,\n",
-      "         -0.0240,  0.0072, -0.2114,  0.1505,  0.1794,  0.0358, -0.1231,  0.0392,\n",
-      "          0.0421,  0.0423,  0.0896,  0.0778,  0.0099, -0.0109,  0.0694,  0.0718,\n",
-      "          0.0120, -0.0319,  0.1469,  0.0471,  0.0532, -0.0952,  0.1329, -0.0057,\n",
-      "          0.0612, -0.0632,  0.1643, -0.0476, -0.0107, -0.1791, -0.0226, -0.0346,\n",
-      "         -0.1342,  0.0498,  0.1445,  0.0906,  0.0174, -0.1219, -0.1045, -0.0325,\n",
-      "         -0.0824,  0.2227, -0.0169,  0.0537, -0.0330,  0.0370,  0.0447, -0.0817,\n",
-      "         -0.0727,  0.0440, -0.1772, -0.0134, -0.0142, -0.0306, -0.1517,  0.0010,\n",
-      "         -0.0994,  0.1485, -0.1067,  0.0546,  0.2714,  0.1857, -0.0979, -0.3056,\n",
-      "          0.0518,  0.0942, -0.0892, -0.0907,  0.0079,  0.0082,  0.0886, -0.0502,\n",
-      "         -0.1103, -0.0112,  0.0397, -0.0341]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "class MyModel(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(MyModel, self).__init__()\n",
-    "        self.cl1 = nn.Linear(25, 60)\n",
-    "        self.cl2 = nn.Linear(60, 16)\n",
-    "        self.fc1 = nn.Linear(16, 120)\n",
-    "        self.fc2 = nn.Linear(120, 84)\n",
-    "        self.fc3 = nn.Linear(84, 10)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = F.relu(self.cl1(x))\n",
-    "        x = F.relu(self.cl2(x))\n",
-    "        x = F.relu(self.fc1(x))\n",
-    "        x = F.relu(self.fc2(x))\n",
-    "        x = F.log_softmax(self.fc3(x), dim=1)\n",
-    "        return x\n",
-    "\n",
-    "\n",
-    "activation = {}\n",
-    "def get_activation(name):\n",
-    "    def hook(model, input, output):\n",
-    "        activation[name] = output.detach()\n",
-    "    return hook\n",
-    "\n",
-    "\n",
-    "model = MyModel()\n",
-    "model.fc2.register_forward_hook(get_activation('fc2'))\n",
-    "x = torch.randn(1, 25)\n",
-    "output = model(x)\n",
-    "print(activation['fc2'])"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('1031_kkh': conda)",
+   "display_name": "kkh_pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -629,7 +582,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f584f2a6c3493bc5ad3f9a7fda70fca86566a62a439156976e7315d3ef22a065"
+    "hash": "6a0bcc4a6c88335402fd18aab6b8baaf35d3cfb2cef319b2b9ecf28f31c9ad5f"
    }
   }
  },
