--- a/test.ipynb
+++ b/test.ipynb
@@ -22,18 +22,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[  0, -64,   0,   0],\n",
-      "        [ -2,  -8, -32,   0]])\n",
-      "tensor([[ 0, 32,  0,  0],\n",
-      "        [ 1,  4, 16,  0]])\n",
-      "0x20\n"
+      "tensor([[[ -1]],\n",
+      "\n",
+      "        [[ -2]],\n",
+      "\n",
+      "        [[ -4]],\n",
+      "\n",
+      "        [[ -8]],\n",
+      "\n",
+      "        [[-16]],\n",
+      "\n",
+      "        [[-32]],\n",
+      "\n",
+      "        [[-64]],\n",
+      "\n",
+      "        [[  0]],\n",
+      "\n",
+      "        [[  0]],\n",
+      "\n",
+      "        [[  0]]])\n",
+      "mask_flag tensor([[[0, 0, 0, 0],\n",
+      "         [0, 0, 0, 0]],\n",
+      "\n",
+      "        [[0, 0, 0, 0],\n",
+      "         [1, 0, 0, 0]],\n",
+      "\n",
+      "        [[0, 0, 0, 0],\n",
+      "         [0, 0, 0, 0]],\n",
+      "\n",
+      "        [[0, 0, 0, 0],\n",
+      "         [0, 1, 0, 0]],\n",
+      "\n",
+      "        [[0, 0, 0, 0],\n",
+      "         [0, 0, 0, 0]],\n",
+      "\n",
+      "        [[0, 0, 0, 0],\n",
+      "         [0, 0, 1, 0]],\n",
+      "\n",
+      "        [[0, 1, 0, 0],\n",
+      "         [0, 0, 0, 0]],\n",
+      "\n",
+      "        [[0, 0, 0, 0],\n",
+      "         [0, 0, 0, 1]],\n",
+      "\n",
+      "        [[1, 0, 0, 0],\n",
+      "         [0, 0, 0, 0]],\n",
+      "\n",
+      "        [[0, 0, 0, 0],\n",
+      "         [0, 0, 0, 0]]], dtype=torch.int16) torch.Size([10, 2, 4])\n",
+      "mask_block tensor([[  0, -64,   0,   0],\n",
+      "        [ -2,  -8, -32,   0]]) torch.Size([2, 4])\n"
      ]
     },
     {
@@ -45,7 +90,7 @@
        "         [ 1,  4, 16,  0]]))"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,20 +102,30 @@
     "    x_shape = x_torch.shape\n",
     "    \n",
     "    dtype_filter    = torch.arange(10) < (17 - dtype)\n",
+    "    \n",
+    "    # [0xffff, 0xfffe, 0xfffc, 0xfff8, 0xfff0, 0xffe0, 0xffc0, 0xff80, 0xff00, 0xfe00]\n",
     "    mask            = torch.tensor([-(1 << i) for i in range(10)]) * dtype_filter\n",
+    "    \n",
+    "    # [0x0000, 0x0001, 0x0002, 0x0004, 0x0008, 0x0010, 0x0020, 0x0040, 0x0080, 0x0100]\n",
     "    offset          = torch.tensor([(256 >> (9 - i)) for i in range(10)]) * dtype_filter\n",
     "    \n",
     "    mask_flag = torch.zeros((10, x_shape[0], x_shape[1]), dtype=torch.int16)\n",
     "    for idx in range(10):\n",
     "        mask_flag[idx] = (torch.abs(x_torch) == (idx + 1))\n",
     "\n",
+    "    print(mask.reshape(-1,1,1))\n",
+    "    print(\"mask_flag\",mask_flag, mask_flag.shape)\n",
+    "    \n",
     "    mask_block = torch.sum(mask_flag * mask.reshape(-1,1,1), dim=0)\n",
     "    offset_block = torch.sum(mask_flag * offset.reshape(-1,1,1), dim=0)\n",
+    "    print(\"mask_block\",mask_block,mask_block.shape)\n",
     "\n",
     "    return mask_block, offset_block\n",
     "    \n",
     "x_torch = torch.tensor([[9, 7, 0, 0],\n",
-    "                        [2, 4, 6, 8]], dtype=torch.int16)\n",
+    "                        [2, 4, 6, 8]], dtype=torch.int16) \n",
+    "# dtype = 10 이므로, rolling이 경우의 수 7가지 이므로, \n",
+    "# 7이상의 값은 0 나머지는 각각의 rolling 값에 따라0xff(-1) 0xfe(-2) 순서로 값을 가짐.\n",
     "shift_to_mask(x_torch, 10)"
    ]
   },
@@ -155,36 +210,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 4) int16\n",
-      "block_filter[cnt] 0 [1 1]\n",
-      "block_filter[cnt] 1 [1 0]\n"
+      "x_numpy [[ 9  7  0  9  7  0  9  7  0  9  7  0]\n",
+      " [ 2  4  8  2  4  8  2  4  8  2  4  8]\n",
+      " [11 12 14 11 12 14 11 12 14 11 12 14]\n",
+      " [ 5  8 25  5  8 25  5  8 25  5  8 25]]\n",
+      "select value [ 9  9  2  2 11 11  5  5] -4\n",
+      "[[ 9  7  0  8  7  0  9  7  0  8  7  0]\n",
+      " [ 2  4  8  0  4  8  2  4  8  0  4  8]\n",
+      " [11 12 14  8 12 14 11 12 14  8 12 14]\n",
+      " [ 5  8 25  4  8 25  5  8 25  4  8 25]]\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
     "import numpy as np\n",
-    "def display_per_block(x_numpy,length):\n",
-    "     x_numpy_shape = x_numpy.shape\n",
-    "     print(x_numpy.shape, x_numpy.dtype)\n",
-    "     # block 개수 는 length와 관련됨.\n",
-    "     # (length/2)*INT16 => 64B기준(INT16*32), => int64로 두고 shape 추가\n",
-    "     block_filter = np.zeros((length, x_numpy_shape[0]), dtype = np.int16)\n",
-    "     for cnt in range(length):\n",
-    "          block_filter[cnt] = np.arange(length) < (length - cnt)\n",
-    "          print(\"block_filter[cnt]\",cnt,block_filter[cnt])\n",
+    "def display_per_block(x,length,value,select_block_index):\n",
+    "    x_numpy = x.numpy()\n",
+    "    x_shape = x_numpy.shape\n",
+    "    print(x_numpy)\n",
+    "    x_2D = x_numpy.reshape(-1,length)\n",
+    "    selected_value = x_2D[:,select_block_index]\n",
+    "    print(\"select value\", selected_value, value)\n",
+    "    x_2D[:,select_block_index] = selected_value & value\n",
+    "    x_result = x_2D.reshape(x_shape)\n",
+    "    return x_result\n",
     "     \n",
-    "x_torch = torch.tensor([[9, 7, 0, 0],\n",
-    "                        [2, 4, 6, 8]], dtype=torch.int16)\n",
-    "x_numpy = x_torch.numpy()\n",
-    "display_per_block(x_numpy,2)"
+    "\n",
+    "x_torch = torch.tensor([[9, 7, 0, 9, 7, 0, 9, 7, 0, 9, 7, 0],\n",
+    "                        [2, 4, 8, 2, 4, 8, 2, 4, 8, 2, 4, 8],\n",
+    "                        [11, 12, 14, 11, 12, 14, 11, 12, 14, 11, 12, 14],\n",
+    "                        [5, 8, 25, 5, 8, 25, 5, 8, 25, 5, 8, 25]], dtype=torch.int16)\n",
+    "x_numpy = x_torch\n",
+    "\n",
+    "\n",
+    "one_hot =display_per_block(x_numpy,6,-4,3)\n",
+    "print(one_hot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # mask_default = [-1,0xffff,-1, ..., dtype = np.int64]\n",
+    "    # mask_default = np.array([ value for i in range(length)]) * block_filter       \n",
+    "    # mask_default_index_even = np.array([ value if i%2==0 else 0 for i in range(length)]) * block_filter\n",
+    "    # mask_default_index_odd  = np.array([ value if i%2==1 else 0 for i in range(length)]) * block_filter     \n",
+    "    # mask_incr = [0xffffffff, 0xfffffffe, ..., dtype = np.int64]\n",
+    "    # mask_incr = np.array([(value << i) for i in range(length)]) * block_filter  \n",
+    "    # mask_decr = np.array([(value << ((length-1)-i)) for i in range(length)]) * block_filter  \n"
    ]
   }
  ],
